# pump-and-dump-detector

./: .gitignore  Dockerfile  architecture.md  benchmarks.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/: data.md
data/processed/features/: features.parquet
features/: build_features.py  data_audit.py  feature_engineering.py
ingestion/: binance_fetch.py  ingestion.md  process.py
modeling/: hyperparameter_tuning.py  shap_analysis.py  shap_report.py  training.py  training_basic.py
modeling/models/: lgbm_basic.txt  lgbm_tuned.json  lgbm_tuned.txt
scripts/: benchmark_degraded.py  benchmark_integration.py  benchmark_log.py  benchmark_predict.py  benchmark_predict_live.py  benchmark_predict_scenarios.py  benchmark_streaming.py  collect_all.sh  live_benchmark_app.py  live_integration_benchmark_app.py
service/: app.py  binance.py  schemas.py
streaming/: consumer.py  producer.py  redis_client.py  watchlist.txt
tests/: conftest.py  mock_feature_engineering_data.py  test_api.py  test_benchmark_predict.py  test_cache_freshness.py  test_etherscan_fetch.py  test_feature_engineering.py  test_model_quality.py  test_service_binance.py  test_streaming_consumer.py  test_streaming_producer.py  test_streaming_runtime.py
tests/benchmarks/: test_benchmark_degraded.py  test_benchmark_integration.py  test_benchmark_log.py  test_benchmark_predict.py  test_benchmark_streaming.py
