[project]
name = "pump-and-dump-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.1",
    "pandas-stubs>=3.0.0.260204",
    "pip>=26.0.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
