[project]
name = "pump-and-dump-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "pandas-stubs>=3.0.0.260204",
    "pyarrow>=19.0.1",
    "pip>=26.0.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "lightgbm>=4.6.0",
    "optuna>=4.7.0",
    "shap>=0.51.0",
]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
